Added cannon locations/name changes + W.T and western E.K units

--- a/avatar/localisation/strategic_region_names_l_english.yml
+++ b/avatar/localisation/strategic_region_names_l_english.yml
@@ -56,7 +56,7 @@
  STRATEGICREGION_56:2 "Iceberg Sea"
  STRATEGICREGION_57:4 "Boreal Fields"
  STRATEGICREGION_58:1 "Fire Fountain Strait"
- STRATEGICREGION_59:2 "Koi Island"
+ STRATEGICREGION_59:3 "Shimsom Small Island"
  STRATEGICREGION_60:2 "West Typhoon Sea"
  STRATEGICREGION_61:2 "Won Island"
  STRATEGICREGION_62:2 "Western Air Island"
@@ -70,7 +70,7 @@
  STRATEGICREGION_70:3 "West Hu Xin"
  STRATEGICREGION_71:1 "Makapu"
  STRATEGICREGION_72:2 "Yue Coast"
- STRATEGICREGION_73:3 "Hu Xin Coast"
+ STRATEGICREGION_73:4 "Zigan Coast"
  STRATEGICREGION_74:1 "Pohuai"
  STRATEGICREGION_75:3 "Taku Highlands"
  STRATEGICREGION_76:3 "Taku Lowlands"
@@ -80,8 +80,8 @@
  STRATEGICREGION_80:1 "Jang Hui Archipelago"
  STRATEGICREGION_81:1 "Shu Jing Archipelago"
  STRATEGICREGION_82:1 "Hebai"
- STRATEGICREGION_83:1 "Dragonbone Island"
- STRATEGICREGION_84:1 "Firefountain Island"
+ STRATEGICREGION_83:2 "Ma'inka Island"
+ STRATEGICREGION_84:2 "Shuhon Island"
  STRATEGICREGION_85:1 "Southwestern Ocean"
  STRATEGICREGION_86:1 "Yellow Neck River"
  STRATEGICREGION_87:1 "Great Mines"
@@ -91,12 +91,12 @@
  STRATEGICREGION_91:1 "Yellow Neck"
  STRATEGICREGION_92:1 "Chamaleon Peninsula"
  STRATEGICREGION_93:1 "Shandong"
- STRATEGICREGION_94:1 "West Laghima Range"
- STRATEGICREGION_95:1 "Hu Xin"
+ STRATEGICREGION_94:2 "Southt Laghima Range"
+ STRATEGICREGION_95:2 "East Hu Xin"
  STRATEGICREGION_96:1 "North Laghima Range"
- STRATEGICREGION_97:1 "West Judashan"
- STRATEGICREGION_98:1 "East Laghima Range"
- STRATEGICREGION_99:1 "East Judashan"
+ STRATEGICREGION_97:2 "Hujiang"
+ STRATEGICREGION_98:2 "Tahiua Mountains"
+ STRATEGICREGION_99:2 "Taihua Slopes"
  STRATEGICREGION_100:2 "Near North Fire Sea"
  STRATEGICREGION_101:1 "Omashu Sea"
  STRATEGICREGION_102:2 "Kolau"
@@ -109,7 +109,7 @@
  STRATEGICREGION_109:2 "Chin Coast"
  STRATEGICREGION_110:1 "Nandao River"
  STRATEGICREGION_111:1 "East Whale Sea"
- STRATEGICREGION_112:1 "Shimsom Archipelago"
+ STRATEGICREGION_112:2 "Chuje Archipelago"
  STRATEGICREGION_113:1 "Full-Moon Bay"
  STRATEGICREGION_114:1 "North Ba Sing Se"
  STRATEGICREGION_115:2 "Omashu"
@@ -168,7 +168,7 @@
  STRATEGICREGION_168:1 "Ice Shard Sea"
  STRATEGICREGION_169:1 "West Patola Sea"
  STRATEGICREGION_170:1 "North Sea"
- STRATEGICREGION_171:1 "Unagi Island"
+ STRATEGICREGION_171:2 "Shimsom Big Island"
  STRATEGICREGION_172:1 "North Patola Sea"
  STRATEGICREGION_173:3 "Patola Archipelago"
  STRATEGICREGION_174:1 "South Patola Sea"
